--- a/public/index.html
+++ b/public/index.html
@@ -6,18 +6,18 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=yes">
   <title>Travelorie</title>
   
-  <link rel="stylesheet" href="/css/21c97.css" media="all" />
-  <link rel="stylesheet" href="/css/c138f.css" media="all" />
-  <link rel="stylesheet" href="/css/221ae.css" media="all" />
-  <link rel="stylesheet" href="/css/9e3ba.css" media="all" />
-  <link rel="stylesheet" href="/css/82aae.css" media="all" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/css/21c97.css" media="all" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/css/c138f.css" media="all" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/css/221ae.css" media="all" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/css/9e3ba.css" media="all" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/css/82aae.css" media="all" />
   <link rel='stylesheet'
     href='https://fonts.googleapis.com/css?family=Montserrat%3A300%2C300i%2C400%2C400i%2C500%2C500i%2Ckdf-post-info-category700%7CLora%3A300%2C300i%2C400%2C400i%2C500%2C500i%2Ckdf-post-info-category700%7CEpicRide%3A300%2C300i%2C400%2C400i%2C500%2C500i%2Ckdf-post-info-category700%7CMerriweather%3A300%2C300i%2C400%2C400i%2C500%2C500i%2Ckdf-post-info-category700&#038;subset=latin-ext&#038;ver=1.0.0'
     type='text/css' media='all' />
   
-  <script src='/js/index.js'></script>
-  <script src="/js/minified/e58d4.js"></script>
-  <script src="/js/minified/864c2.js"></script>
+  <script src='%PUBLIC_URL%/js/index.js'></script>
+  <script src="%PUBLIC_URL%/js/minified/e58d4.js"></script>
+  <script src="%PUBLIC_URL%/js/minified/864c2.js"></script>
 </head>
 
 <body
@@ -34,9 +34,9 @@
     </div>
   </div>
 
-  <script src="/js/minified/63c68.js"></script>
-  <script src="/js/minified/c81e7.js"></script>
-  <script src="/js/minified/61187.js"></script>
-  <script src="/js/minified/13d7d.js"></script>
+  <script src="%PUBLIC_URL%/js/minified/63c68.js"></script>
+  <script src="%PUBLIC_URL%/js/minified/c81e7.js"></script>
+  <script src="%PUBLIC_URL%/js/minified/61187.js"></script>
+  <script src="%PUBLIC_URL%/js/minified/13d7d.js"></script>
 </body>
 </html>
